--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-    "name": "preact-webpack-app",
-    "version": "1.0.0",
-    "description": "A simple Preact + Webpack app",
-    "scripts": {
-        "start": "webpack serve --mode development",
-        "build": "webpack --mode production"
-    },
-    "dependencies": {
-        "preact": "^10.5.13",
-        "preact-render-to-string": "^5.1.17"
-    },
-    "devDependencies": {
-        "webpack": "^5.49.0",
-        "webpack-cli": "^4.7.2",
-        "webpack-dev-server": "^4.0.0",
-        "babel-loader": "^8.2.2",
-        "@babel/core": "^7.14.8",
-        "@babel/preset-env": "^7.14.8"
-    }
+  "name": "preact-webpack-app",
+  "version": "1.0.0",
+  "description": "A simple Preact + Webpack app",
+  "scripts": {
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
+  },
+  "dependencies": {
+    "preact": "^10.5.13",
+    "preact-render-to-string": "^5.1.17"
+  },
+  "devDependencies": {
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^4.0.0",
+    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
+    "npm": "latest"
+  }
 }
